--- a/scripts/Simple_models.ipynb
+++ b/scripts/Simple_models.ipynb
@@ -39,54 +39,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_TWEETS = 60000\n",
-    "MAX_LEN = 60"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "NUM_TWEETS = 30000\n",
+    "MAX_LEN = 60\n",
     "path_to_tweet = '../data/twitter-datasets/'\n",
     "pos_path = path_to_tweet + 'train_pos_full.txt'\n",
     "neg_path = path_to_tweet + 'train_neg_full.txt'\n",
     "test_path = path_to_tweet + 'test_data.txt'\n",
     "\n",
-    "df_train = load_train(pos_path, neg_path, NUM_TWEETS)\n"
+    "df_train = load_train(pos_path, neg_path, NUM_TWEETS)\n",
+    "#Un-/comment next line to de-/activate preprocessing\n",
+    "df_train = preprocess(df_train, path_to_tweet + 'out_pre_train_testing.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transform the data"
+    "## Transform the data - tokenization"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#-----BERT-----\n",
-    "#df_train = bert_tokenize_train(df_train, path_to_tweet + 'out_train_testing.csv', max_len=MAX_LEN)\n",
-    "#add_padding(df_train)\n",
-    "#-----GloVe----\n",
-    "#Un-/comment next line to de-/activate preprocessing\n",
-    "df_train = preprocess(df_train, path_to_tweet + 'out_pre_train_testing.csv')\n",
-    "\n",
-    "\n",
-    "kf = KFold(n_splits=4, random_state=42, shuffle=True)\n",
-    "cross_val = kf.split(df_train)\n",
-    "\n"
+    "Uncomment the cell corresponding to the wanted tokenization"
    ]
   },
   {
@@ -122,7 +102,10 @@
    ],
    "source": [
     "#-------BERT------\n",
-    "\"\"\"df_list_bert = []\n",
+    "\"\"\"\n",
+    "df_train = bert_tokenize_train(df_train, path_to_tweet + 'out_train_testing.csv', max_len=MAX_LEN)\n",
+    "add_padding(df_train)\n",
+    "df_list_bert = []\n",
     "for token in df_train['input_ids']:\n",
     "    df_list_bert.append(list(token))\n",
     "df_list_bert = skp.scale(df_list_bert)\n",
@@ -140,6 +123,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "kf = KFold(n_splits=4, random_state=42, shuffle=True)\n",
+    "cross_val = kf.split(df_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-layer MLP"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -153,7 +155,7 @@
     "best_acc = 0\n",
     "best_params = []\n",
     "for alpha in np.logspace(-3, -1, 3):\n",
-    "    for activation in ['tanh']:\n",
+    "    for activation in ['tanh', 'relu', 'logistic']:\n",
     "        print('alpha = ', alpha)\n",
     "        for size in sizes:\n",
     "            print(\"size =\", size)\n",
@@ -197,6 +199,13 @@
    "source": [
     "best_acc_mlp = best_acc\n",
     "best_acc_mlp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
    ]
   },
   {
@@ -272,11 +281,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### SVM"
+   ]
   },
   {
    "cell_type": "code",
